...

                    android:layout_width="380dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Enter title"

                    app:layout_constraintEnd_toEndOf="@+id/todo_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/todo_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/todo_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="Deadline"
                    android:inputType="date"
...
            </LinearLayout>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/todo_reminder"
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="true"
                    android:hint="Reminder"
                    android:inputType="time"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <RadioGroup
                android:id="@+id/todo_priority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/todo_description"
                app:layout_constraintTop_toBottomOf="@+id/todo_reminder">

                <RadioButton
                    android:id="@+id/high_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="High Priority"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/medium_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medium Priority"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/low_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Low Priority"
                    android:textSize="16sp" />

            </RadioGroup>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/done_button_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Done"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/todo_priority"
                    app:layout_constraintStart_toEndOf="@+id/todo_description"
                    app:layout_constraintTop_toBottomOf="@+id/todo_priority" />
            </TableRow>
        </TableLayout>
...
